--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,3 +1,14 @@
+html {
+  --light-amber: #fcc635;
+  --medium-amber: #f6a92a;
+  --medium-red: #b31d05;
+  --black-red: #0f0101;
+  --background-color: var(--black-red);
+
+  --text-color: var(--medium-amber);
+  --title-color: var(--medium-amber);
+}
+
 .grid {
   display: grid;
   grid-template-columns: 150px auto 150px;
@@ -9,14 +20,31 @@ header, footer, article {
 }
 
 .pre-code {
-  max-width: 90vw;
+  max-width: 100vw;
+  width: 100%;
+}
+
+img {
+  max-width: 100vw;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Overpass', sans-serif;
+  color: var(--title-color);
+}
+
+p {
+  line-height: 1.3rem;
 }
 
 /* Demo Specific Styles */
 body {
+  font-family: 'Arimo', sans-serif;
   margin: 0 auto;
   max-width: 56em;
   padding: 0;
+  background: var(--background-color);
+  color: var(--text-color);
 }
 
 header {
@@ -26,7 +54,6 @@ header {
 header,
 aside,
 footer {
-  background: #eaeaea;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -38,7 +65,6 @@ footer {
 
 article {
   display: flex;
-  background: #eaeaea;
   flex-direction: column;
   align-items: flex-start;
 }
