--- a/styles/layout.css
+++ b/styles/layout.css
@@ -7,11 +7,17 @@ html {
 
   --text-color: var(--medium-amber);
   --title-color: var(--medium-amber);
+  --page-margin: 1rem;
+  --page-max-width: calc(100vw - 2 * var(--page-margin));
+}
+
+main {
+  margin: 0 1rem;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: 150px auto 150px;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 1em;
 }
 
@@ -19,13 +25,12 @@ header, footer, article {
   grid-column: 1 / 4;
 }
 
-.pre-code {
-  max-width: 100vw;
-  width: 100%;
+.prismjs {
+  width: var(--page-max-width);
 }
 
 img {
-  max-width: 100vw;
+  max-width: var(--page-max-width);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -35,6 +40,11 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   line-height: 1.3rem;
+}
+
+table th, table td {
+  max-width: calc((var(--page-max-width) - 8px)/ 3); /* subtract 8px for border */
+  overflow: hidden;
 }
 
 /* Demo Specific Styles */
