--- a/styles/layout.css
+++ b/styles/layout.css
@@ -9,6 +9,7 @@ html {
   --title-color: var(--medium-amber);
   --page-margin: 1rem;
   --page-max-width: calc(100vw - 2 * var(--page-margin));
+  --body-max-width: 56em;
 }
 
 main {
@@ -25,8 +26,17 @@ header, footer, article {
   grid-column: 1 / 4;
 }
 
+header {
+  font-family: 'Overpass', sans-serif;
+  font-weight: 600;
+}
+
+
+article > pre {
+  width: 100%;
+}
 .prismjs {
-  width: var(--page-max-width);
+  max-width: var(--page-max-width);
 }
 
 img {
@@ -35,7 +45,16 @@ img {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Overpass', sans-serif;
+  font-weight: 900;
   color: var(--title-color);
+}
+
+h1 {
+  font-size: 1.75rem;
+}
+
+h2 {
+  font-size: 1.25rem;
 }
 
 p {
@@ -51,7 +70,7 @@ table th, table td {
 body {
   font-family: 'Arimo', sans-serif;
   margin: 0 auto;
-  max-width: 56em;
+  max-width: var(--body-max-width);
   padding: 0;
   background: var(--background-color);
   color: var(--text-color);
